prepping for deploy

--- a/apps/simple-multi-page/src/index.html
+++ b/apps/simple-multi-page/src/index.html
@@ -7,6 +7,22 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+
+  <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDqoyiHg8CEkMQ-iTX7LPQ-fTi0kJOpqPg",
+      authDomain: "simple-multi-page.firebaseapp.com",
+      databaseURL: "https://simple-multi-page.firebaseio.com",
+      projectId: "simple-multi-page",
+      storageBucket: "",
+      messagingSenderId: "431136719957"
+    };
+    firebase.initializeApp(config);
+  </script>
+
 </head>
 <body>
   <app-root></app-root>
